Add more formating for SlashBreakModal